# pipfile-util

./: Cargo.toml  README.md
src/: diff.rs  main.rs  pipfile.rs  pipfile_lock.rs  semver.rs
testdata/: Pipfile
