[package]
name = "pipfile-diff"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

categories = ["command-line-utilities", "development-tools"]
description = "Command line utility to create a diff of Pipfile.lock"
keywords = ["python", "pipenv", "git"]

authors = ["Markus Kasten <github@markuskasten.eu>"]
repository = "https://github.com/markus-k/pipfile-diff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
git2 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
