[package]
name = "pipfile-util"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

categories = ["command-line-utilities", "development-tools"]
description = "Command line utility for working with pipenv's Pipfile's"
keywords = ["python", "pipenv", "git"]

authors = ["Markus Kasten <github@markuskasten.eu>"]
repository = "https://github.com/markus-k/pipfile-util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["cargo", "derive"] }
git2 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
